# python-course-public-cloud

./: .gitignore  .vsls.json  README.md  adv-course-class.md  adv-course-closures.md  adv-course-context-managers.md  adv-course-decorators.md  advanced-course-classes.md  advanced-course.md  agenda-day2.md  agenda.md  beginners-course-day2.md  beginners-course.md  quiz-time-solutions.md  quiz-time.md
topic-classes/: Version.xmi  basic-version.py  version.py  version_template.py  version_v0.py  version_v1_repr.py  version_v2_checks.py  version_v3_properties.py  version_v4_iter.py  version_v5_comparison.py  version_v5_totalordering.py  version_v6_other_types.py  version_v7_incrementparts.py  version_v8_classmethods.py
topic-cliparsing/: cli_structure.py  cli_verbose.py  cli_version.py  ls.py  quadratic_equation.py  version.py
topic-closures/: averager.py  countdown.py  counter.py  xmlnamespace.py
topic-contextmanager/: changedir.py  changedir_as_class.py  greeter.py  greeter_as_class.py  indenter.py  tag.py  temporary.py  timer.py  timer_as_class.py
topic-decorators/: currency.py  deprecated.py  linetrace.py  profiled.py  register.py  register_class.py  simple_deprecated_with_print.py  simple_deprecated_with_warnings.py  simple_sleep.py  sleep.py  star.py  timeout.py  timing.py  todo.py  todo_optional.py  tracing.py  typecheck.py
topic-descriptors/: typedproperty.py
topic-doctest/: add.py
topic-func/: clip.py  concat.py  is_balanced.py  product.py  shorten.py  tag.py  unique.py
topic-generator/: countdown.py  myenumerate.py  (+1 more)
topic-pythonproject/: setup.cfg
(+6 files in other folders)
