# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
#
[metadata]
name = foo
version = 0.1.0
description = A short example
# long_description = file README.md
# long_description_content_type = text/markdown
author = Tux Penguin
autor_email = tux@greenland.com
url = https://github.com/tux/foo
downlaod_url = https://github.com/tux/foo/downloads
license = MIT
# See https://pypi.org/pypi?%3Aaction=list_classifier
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6.*
include_package_data = True
scripts =
    bin/hello.py
install_requires =
    semver
test_requires =
    pytest

[options.data_files]
/etc/foo/ = config/hello.config